@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
 * [mms] Collapse multiple mailbox export options in dynamic mailbox view to single action.
 * [mms] Importing a PGP personal key now only requires the private key.
  </notes>
@@ -2838,6 +2839,7 @@
    <date>2012-10-30</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Better UI for changing quicksearch criteria in dynamic mailbox screen.
 * [mms] Collapse multiple mailbox export options in dynamic mailbox view to single action.
 * [mms] Importing a PGP personal key now only requires the private key.
    </notes>
